src/test/deca/syntax/valid/class_simple.deca
// Description :
// Declaration de classe simple
//
// Resultats :
// ok

class A {
    int x;
    int f() {
        return 1;
    }
}

{
}
