src/test/deca/syntax/invalid/avecObjet/asm_meth_no_string_body.deca
// Description :
//    Invalid methode body asm
//
// Resultats :
//    Erreur syntaxique
//    Ligne 9 : no viable alternative at input 'voidAasm'

class A {
    void A asm(int x);
}